@@ -1,0 +1,171 @@
+begin_unit
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+begin_package
+DECL|package|org.apache.solr.highlight
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|highlight
+package|;
+end_package
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|vectorhighlight
+operator|.
+name|FragListBuilder
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|DefaultSolrParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|SolrParams
+import|;
+end_import
+begin_class
+DECL|class|SingleFragListBuilder
+specifier|public
+class|class
+name|SingleFragListBuilder
+extends|extends
+name|HighlightingPluginBase
+implements|implements
+name|SolrFragListBuilder
+block|{
+DECL|method|getFragListBuilder
+specifier|public
+name|FragListBuilder
+name|getFragListBuilder
+parameter_list|(
+name|SolrParams
+name|params
+parameter_list|)
+block|{
+name|numRequests
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|defaults
+operator|!=
+literal|null
+condition|)
+block|{
+name|params
+operator|=
+operator|new
+name|DefaultSolrParams
+argument_list|(
+name|params
+argument_list|,
+name|defaults
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+operator|new
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|vectorhighlight
+operator|.
+name|SingleFragListBuilder
+argument_list|()
+return|;
+block|}
+comment|///////////////////////////////////////////////////////////////////////
+comment|//////////////////////// SolrInfoMBeans methods ///////////////////////
+comment|///////////////////////////////////////////////////////////////////////
+annotation|@
+name|Override
+DECL|method|getDescription
+specifier|public
+name|String
+name|getDescription
+parameter_list|()
+block|{
+return|return
+literal|"SingleFragListBuilder"
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getSource
+specifier|public
+name|String
+name|getSource
+parameter_list|()
+block|{
+return|return
+literal|"$URL$"
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getSourceId
+specifier|public
+name|String
+name|getSourceId
+parameter_list|()
+block|{
+return|return
+literal|"$Id$"
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getVersion
+specifier|public
+name|String
+name|getVersion
+parameter_list|()
+block|{
+return|return
+literal|"$Revision$"
+return|;
+block|}
+block|}
+end_class
+end_unit
